<resources>
    <string name="app_name">设置</string>
    <string name="bt_back">首页</string>
    <string name="connected">已连接</string>
    <string name="connect_saved">已保存</string>
    <string name="connect_failed">连接失败</string>
    <string name="connect_refuse">网络拒绝接入。</string>
    <string name="connect_timeout">连接无响应。</string>
    <string name="on_connect">正在连接…</string>
    <string name="choose_network">选择网络…</string>
    <string name="refresh">刷新</string>
    <string name="please_refresh_wifi">无可连接的Wi-Fi网络，请刷新重试。</string>
    <string name="more">更多…</string>
    <string name="scanning_again">正在重新扫描…</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="password_error">密码错误</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="join">加入</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_ssid">请输入名称</string>
    <string name="remove_password">取消保存</string>
    <string name="finish">确定</string>
    <string name="wifi_state">状态信息</string>
    <string name="wifi_strength">信号强度</string>
    <string name="wifi_speed">连接速度</string>
    <string name="ip_adress">IP地址</string>
    <string name="security">安全性</string>
    <string name="bluetooth">蓝牙 </string>
    <string name="bluetoothTurningOn">蓝牙正在打开…</string>
    <string name="bluetoothTurningOff">蓝牙正在关闭…</string>
    <string name="bluetoothDeviceName">设备名称： </string>
    <string name="bluetoothOff">蓝牙已关闭。</string>
    <string name="scan_code_iplus">扫码安装美的i+客户端</string>
    <string name="scan_code_iplus_content">1、手机扫描左侧二维码，安装美的i+客户端。\n 2、您也可以在应用市场搜索“美的i+”并下载安装。\n 3、使用登录冰箱的账号登录美的i+。\n 4、在美的i+“云控制”中实现对冰箱的远程控制。</string>
    <string name="scan_code_weixin">扫码关注微信公众号</string>
    <string name="scan_code_weixin_content">微信扫描左侧二维码，关注美的智能冰箱公众号。\n 了解更多生活健康和智能资讯，并参与交流互动。</string>
    <string name="volume">音量</string>
    <string name="open_radio">打开早报</string>
    <string name="time_range">时间范围</string>
    <string name="open_weather">播报天气</string>
    <string name="brightness">亮度</string>
    <string name="psensor">人感</string>
    <string name="auto_time">自动同步网络时间</string>
    <string name="device_params">基本参数</string>
    <string name="fridge_model">冰箱型号</string>
    <string name="device_id">设备ID</string>
    <string name="system_version">系统版本</string>
    <string name="device_log">设备日志</string>
    <string name="kernel_log">内核日志</string>
    <string name="system_log">系统日志</string>
    <string name="system_settings">系统设置</string>
    <string name="restart">重启应用</string>
    <string name="recovery">恢复初始状态</string>
    <string name="midea_qq">美的智能冰箱用户QQ群</string>
    <string name="qq_group_01">QQ群: 587838345</string>
    <string name="qq_group_01_area">华南西南地区 \n广东、广西、海南、四川、\n云南、贵州、西藏、重庆</string>
    <string name="qq_group_02">QQ群: 129430936</string>
    <string name="qq_group_02_area">华东华中地区 \n山东、江苏、安徽、浙江、\n福建、上海、湖北、湖南、\n河南、江西</string>
    <string name="qq_group_03">QQ群: 536520637</string>
    <string name="qq_group_03_area">西北地区 \n宁夏、新疆、青海、陕西、\n甘肃</string>
    <string name="qq_group_04">QQ群: 535963276</string>
    <string name="qq_group_04_area">华北东北地区 \n北京、天津、河北、山西、\n内蒙古、辽宁、吉林、\n黑龙江</string>
    <string name="kernel_version">内核版本</string>
    <string name="mac">MAC地址</string>
    <string name="recovery_message">是否恢复初始状态？</string>
    <string name="restart_message">确认重启？</string>
    <string name="order_control">订单管理</string>
    <string name="my_favorite">我的收藏</string>
    <string name="message_centre">消息中心</string>
    <string name="account_security">账户安全</string>
    <string name="not_login">未登录</string>
    <string name="quit">退出登录</string>
    <string name="login">登录</string>
    <string name="please_login">您还没有登录哦亲(づ￣3￣)づ╭❤～。</string>
    <string name="no_update">当前版本已是最新版本</string>
    <string name="has_update_need_download">检测到新的版本可供下载</string>
    <string name="downloading">下载中，请稍后…</string>
    <string name="checking">检查中，请稍后…</string>
    <string name="download_fail">下载失败</string>
    <string name="you_can_update_now">有新的版本可供升级</string>
    <string name="no_net">请确认网络连接正常后重试。</string>
    <string name="check_update">检查更新</string>
    <string name="update">升级</string>
    <string name="download">下载</string>
    <string name="reDownload">重新下载</string>
    <string name="cancelDownload">取消下载</string>
    <string name="downloadFinish">下载完成</string>
    <string name="check_rom">正在核实升级ROM包</string>
    <string name="cancel_update_message">正在进行版本更新，现在退出将导致更新失败！</string>
    <string name="cancel_quit">取消并退出</string>
    <string name="continue_update">继续更新</string>
    <string name="no_net_message">断网啦！\n要将冰箱连接到网络么？</string>
    <string name="remind_me_late">以后再说</string>
    <string name="connect_net">去联网</string>
    <!-- 用户协议 -->
    <string name="user_guide_protocol_content">
        软件用户许可安装协议\n
        重要须知：合肥美的电冰箱有限公司（以下简称“美的冰箱”）在此特别提醒用户认真阅读、充分理解本《软件许可安装协议》（下称《协议》）--- 用户应认真阅读、充分理解本《协议》中各条款，包括免除或者限制美的冰箱责任的免责条款及对用户的权利限制条款。请您审慎阅读并选择接受或不接受本《协议》。除非您接受本《协议》所有条款，否则您无权安装或使用本软件及其相关服务。您的安装、使用、License获取和登录等行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。\n
        本《协议》是您（下称“用户”）与美的冰箱之间关于用户安装、使用软件，注册、使用、管理软件；以及使用美的冰箱公司提供的相关服务所订立的协议。本《协议》描述美的冰箱与用户之间关于“软件”许可使用及服务相关方面的权利义务。“用户”是指通过美的冰箱提供的获取软件授权和License注册的途径获得软件产品及号码授权许可以及使用美的冰箱公司提供的相关服务的个人或组织。\n
        本《协议》可由美的冰箱随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知。用户可重新下载安装本软件或网站查阅最新版协议条款。在美的冰箱修改《协议》条款后，如果用户不接受修改后的条款，请立即停止使用美的冰箱提供的软件和服务，用户继续使用美的冰箱提供的软件和服务将被视为已接受了修改后的协议。 除本《协议》有明确规定外，本《协议》并未对利用本“软件”使用的美的冰箱或合作单位的其他服务规定相关的服务条款。对于这些服务，一般有单独的服务条款加以规范，用户须在使用有关服务时另行了解与确认。单独的服务条款与本协议有冲突的地方，以单独的服务条款为准。如用户使用该服务，视为对相关服务条款的接受。\n
        1 知识产权声明\n
        1.1 本“软件”是由美的冰箱开发。“软件”的一切版权、商标权、专利权、商业秘密等知识产权，以及与“软件”相关的所有信息内容，包括但不限于：文字表述及其组合、图标、图饰、图表、色彩、界面设计、版面框架、有关数据、印刷材料、或电子文档等均受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护，除涉及第三方授权的软件或技术外，美的冰箱享有上述知识产权。\n
        1.2 未经美的冰箱书面同意，用户不得为任何营利性或非营利性的目的自行实施、利用、转让或许可任何三方实施、利用、转让上述知识产权，美的冰箱保留追究上述未经许可行为的权利。\n
        2 “软件”授权范围\n
        2.1 本软件为平台级应用软件，包含多个子系统模块，每个模块需单独安装、部署、授权及进行License分配。美的冰箱根据相关协议提供以上不同模块的安装组合给用户。\n
        2.2 用户不得未经美的冰箱许可，将本“软件”安装在未经美的冰箱明示许可的其他计算机设备上。\n
        2.3 保留权利：未明示授权的其他一切权利仍归美的冰箱所有，用户使用其他权利时须另外取得美的冰箱的书面同意。\n
        2.4 除本《协议》有明确规定外，本《协议》并未对利用本“软件”访问的美的冰箱公司或合作单位的其他服务规定相关的服务条款，对于这些服务有可能有单独的服务条款加以规范，请用户在使用有关服务时另行了解与确认。\n
        3 用户使用须知\n
        3.1 用户应保证其提供给美的冰箱的资料均为真实无误。\n
        3.2 关于美的冰箱软件使用\n
        3.2.1 用户可以通过购买注册美的License使用美的冰箱提供的与购买软件相关的各种服务。用户通过购买软件License使用美的冰箱的服务时，须同时遵守各项服务的服务条款。\n
        3.2.2 软件的著作权归美的冰箱所有，用户完成申请注册手续后，获得软件的使用权。\n
        3.2.3 公司软件License使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。如果软件发现使用者并非License初始注册人，公司有权在未经通知的情况下回收该License而无需向该账号使用人承担法律责任，由此带来的包括并不限于中断、清空等损失由用户自行承担。美的冰箱公司禁止用户私下有偿或无偿转让License，以免因软件问题产生纠纷，用户应当自行承担因违反此要求而遭致的任何损失，同时美的冰箱保留追究上述行为人法律责任的权利。\n
        3.2.4 用户承担软件使用License的保管责任，并就其基于License项下之一切活动负全部责任。用户须重视软件License保护。用户同意如发现他人未经许可使用其License时立即通知美的冰箱。\n
        3.3 用户在遵守法律及本《协议》的前提下可依本《协议》使用本“软件”。用户无权实施包括但不限于下列行为：\n
        3.3.1 用户通过非美的冰箱公司开发、授权或认可的三方兼容软件、系统登录或使用美的冰箱软件及服务，用户针对美的冰箱的软件和服务使用非美的冰箱开发、授权或认证的插件和二次开发软件；\n
        3.3.2 删除本“软件”及其他副本上所有关于版权的信息、内容；\n
        3.3.3 对本“软件”进行反向工程、反向汇编、反向编译等；\n
        3.3.4 对于本“软件”相关信息等，未经美的冰箱书面同意，用户擅自实施包括但不限于下列行为：使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版，建立镜像站点、擅自借助本“软件”发展与之有关的衍生产品、作品、服务、插件、外挂、兼容、互联等。\n
        3.3.5 利用本“软件”发表、传送、传播、储存违反国家法律、危害国家安全、祖国统一、社会稳定、公序良俗的内容，或任何不当的、侮辱诽谤的、淫秽的、暴力的及任何违反国家法律法规政策的内容。\n
        3.3.6 利用本“软件”发表、传送、传播、储存侵害他人知识产权、商业秘密权等合法权利的内容；\n
        3.3.7 传送或散布以其他方式实现传送含有受到知识产权法律保护的图像、相片、软件或其他资料的文件，作为举例（但不限于此）：包括版权或商标法（或隐私权或公开权），除非用户拥有或控制着相应的权利或已得到所有必要的认可；\n
        3.3.8 使用任何包含有通过侵犯商标、版权、专利、商业机密或任何一方的其他专有权利的方式利用本“软件”获得的图像或相片的资料或信息；\n
        3.3.9 任何人进行任何危害计算机网络安全的行为，包括但不限于：使用未经许可的数据或进入未经许可的服务器/账号；未经允许进入公众计算机网络或者他人计算机系统并删除、修改、增加存储信息；未经许可，企图探查、扫描、测试本“软件”系统或网络的弱点或其它实施破坏网络安全的行为；企图干涉、破坏本“软件”系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；伪造TCP/IP数据包名称或部分名称；\n
        3.3.10 通过修改或伪造软件作品运行中的指令、数据、数据包，增加、删减、变动软件的功能或运行效果，不得将用于上述用途的软件通过信息网络向公众传播或者运营；\n
        3.3.11 将本软件及美的冰箱提供的服务用于核设施运行、生命维持或其他会使人类及其财产处于危险之中的重大设备。用户明白本软件及美的冰箱提供的服务并非为以上目的而设计，如果因为软件和服务的原因导致以上操作失败而带来的人员伤亡、严重的财产损失和环境破坏，美的冰箱将不承担任何责任；\n
        3.3.12 制作、发布、传播用于窃取相关或者其它软件及他人专属信息、财产、保密信息的软件；\n
        3.3.13 在未经美的冰箱公司书面明确授权前提下，出售、出租、出借、散布、转移或转授权软件和服务或相关的链接或从使用软件和服务或软件和服务的条款中获利，无论以上使用是否为直接经济或金钱收益；\n
        3.3.14 其他以任何不合法的方式、为任何不合法的目的、或以任何与本协议不一致的方式使用本软件和和美的冰箱提供的其他服务；\n
        3.3.15 用户若违反上述规定，美的冰箱有权采取终止、完全或部分中止、限制用户对软件的使用功能。\n
        3.4 本“软件”同大多数互联网软件一样，受包括但不限于用户原因、网络服务质量、社会环境等因素的差异影响，可能受到各种安全问题的侵扰，如他人利用用户的资料，造成现实生活中的骚扰；用户下载安装的其它软件或访问的其他网站中含有“特洛伊木马”等病毒，威胁到用户的计算机信息和数据的安全，继而影响本“软件”的正常使用等等。用户应加强信息安全及使用者资料的保护意识，要注意加强密码保护，以免遭致损失和骚扰。\n
        3.5 非经美的冰箱或美的冰箱授权开发并正式发布的其它任何由本“软件”衍生的软件均属非法，下载、安装、使用此类软件，将可能导致不可预知的风险，由此产生的一切法律责任与纠纷一概与美的冰箱无关。建议用户不要轻易下载、安装、使用此类软件，否则引起的一切法律责任纠纷一概与美的冰箱无关。\n
        3.6 一般而言，美的冰箱公司基于下列原因需要使用到用户的资料信息：（1）执行软件验证服务。（2）执行软件升级服务。（3）提高您的使用安全性并提供客户支持。（4）执行美的冰箱公司的隐私保护声明。\n
        3.7 “用户同意”的方式有：（1）接受本协议及美的冰箱公司发布的服务条款；（2）用户通过电子邮件、电话、传真、及时通信等方式所作的口头或者书面表示；（3）协议或者服务声明中有“默认同意”条款且用户对此无异议；（4）其他美的冰箱与用户均认可的方式。\n
        3.8 本“软件”的替换、修改和升级：美的冰箱保留在任何时候通过为您提供本“软件”替换、修改、升级版本的权利以及为替换、修改或升级收取费用的权利。\n
        3.9 本“软件”使用的第三方的软件或技术\n
        3.9.1 本“软件”可能会使用第三方的软件或技术，该等使用均是获得了合法授权的。如因本“软件”使用的第三方软件或技术引发的任何纠纷，由该第三方负责解决，美的冰箱不承担任何责任。 美的冰箱不对该第三方软件或技术提供客服支持，若用户需要获取支持，请与该第三方联系。\n
        3.9.2 本“软件”如果使用了第三方的软件或技术，该第三方对该等使用有要求且需要用户遵守的，则用户应当遵守该等要求。本《协议》的附件将向用户介绍本“软件”使用了的第三方的软件或技术，并将向用户提供该第三方网络链接地址，用户可以通过点击该网络链接地址浏览、阅读、了解该第三方提出的该等软件或技术的使用要求。\n
        3.9.3 本《协议》上述第3.9.2条提到，本《协议》附件将对本“软件”所使用的第三方的软件或技术进行介绍。用户充分理解到：该介绍仅仅是美的冰箱依照该第三方提供的情况，并根据美的冰箱的理解对该等软件或技术所作的一个大致的介绍。美的冰箱并不对该等软件或技术的功能、性质及其他情况作任何明示的或者默示的担保，也不保证该介绍就是对该等软件或技术所有情况的全面的、细致的介绍。用户如需对该等软件或技术进行全面细致的了解，应当直接与该第三方联系。\n
        3.9.4 本《协议》上述第3.9.2条提到，第三方可能对本“软件”使用其授权的软件或技术有相关要求，且需要用户遵守，本《协议》附件将向用户提供第三方的网络链接地址，供用户了解第三方的相关要求。用户充分理解到：本《协议》附件所提供的第三方的网络链接地址，是美的冰箱根据第三方提供的当前的网络链接地址而向用户提供的。该第三方有可能变更上述网络链接地址，也有可能对本“软件”使用其授权的软件或技术的相关要求进行变更，而美的冰箱可能不能及时更新上述网络链接地址。因此，用户需要及时了解该第三方上述网络链接地址及相关要求的变更。而且，用户还充分理解到：第三方的相关要求可能会以“软件使用许可协议”、“授权协议”或者其他的形式来表达，是本《协议》不可分割的组成部分，与本《协议》具有同等的法律效力。且如该等要求需要用户遵守而您没有遵守时，该第三方或者国家司法机关可能会对您提起诉讼、罚款或其他的制裁措施，且要求美的冰箱给予协助。\n
        3.9.5 您充分理解到：本《协议》附件所提到的本“软件”使用的第三方授权的软件或技术，仅仅是本“软件”当前“正在”使用的第三方授权的软件或技术，美的冰箱并不保证本“软件”将会永久地使用该等软件或技术，也不保证将来不会使用该第三方的其他的软件或技术，还不保证将来不会使用非该第三方的同类型或不同类型的软件或技术。\n
        4 法律责任与免责\n
        4.1 利用的许可\n
        4.2 美的冰箱特别提请用户注意：美的冰箱为了保障公司业务发展和调整的自主权，美的冰箱拥有随时自行修改或中断软件授权而不需通知用户的权利，如有必要，修改或中断会以通告形式公布于美的冰箱网站重要页面上。\n
        4.3 用户违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿美的冰箱与合作公司、关联公司，并使之免受损害。\n
        4.4 使用本“软件”由用户自己承担风险，美的冰箱及合作单位对本“软件”不作任何类型的担保，不论是明示的、默示的或法令的保证和条件，包括但不限于本“软件”的适销性、适用性、无病毒、无疏忽或无技术瑕疵问题、所有权和无侵权的明示或默示担保和条件，对在任何情况下因使用或不能使用本“软件”所产生的直接、间接、偶然、特殊及后续的损害及风险，美的冰箱及合作单位不承担任何责任。\n
        4.5 使用本“软件”涉及到互联网服务，可能会受到各个环节不稳定因素的影响，存在因不可抗力、计算机病毒、黑客攻击、系统不稳定、用户所在位置、用户关机，非法内容信息、骚扰信息屏蔽以及其他任何网络、技术、通信线路、信息安全管理措施等原因造成的用户的经济损失，美的冰箱及合作单位不承担任何责任。\n
        4.6 用户因第三方如电信部门的通讯线路故障、技术问题、网络、电脑故障、系统不稳定性及其他各种不可抗力原因而遭受的一切损失，美的冰箱及合作单位不承担责任。\n
        4.7 因技术故障等不可抗事件影响到服务的正常运行的，美的冰箱及合作单位承诺在第一时间内与相关单位配合，及时处理进行修复，但用户因此而遭受的一切损失，美的冰箱及合作单位不承担责任。\n
        5 其他条款\n
        5.1 本《协议》所定的任何条款的部分或全部无效者，不影响其它条款的效力。\n
        5.2 本《协议》的解释、效力及纠纷的解决，适用于中华人民共和国法律。若用户和美的冰箱之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此完全同意将纠纷或争议提交美的冰箱公司所在地有管辖权的人民法院管辖。\n
        5.3 本《协议》版权由美的冰箱所有，美的冰箱保留一切解释权利。本文中提及的软件和服务名称有可能为美的冰箱的注册商标或商标，受法律保护。\n
    </string>
</resources>
